--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     /* Background Image */
-    background-image: url("../img/vadim-sherbakov-d6ebY-faOO0-unsplash.jpg"); 
+    background-image: url("../img/dbu5.jpg"); 
     background-size: cover; 
     background-repeat: no-repeat;
     display: flex;
