--- a/CSS/announcements.css
+++ b/CSS/announcements.css
@@ -147,3 +147,16 @@ button:hover {
 .delete-button:hover {
     background-color: #c9302c;
 }
+
+footer {
+    background-color: #004080; 
+    color: white;
+    text-align: center;
+    padding: 10px 0; 
+    margin-top: 20px;
+    width: 100%; 
+}
+
+footer p {
+    margin: 0;
+}
